    - [ GH-122 ] Upgrade Apache commons-compress to 1.21
    - [ GH-102 ] Fix CRC32.update calls in zlib.py
    - [ GH-101 ] Improve boxing of arguments to vararg methods
    - [ GH-98 ] CVE-2019-9740: CRLF injection by url parameter
    - [ GH-97 ] Failures in SNI support affecting pip
    - [ GH-93 ] Permissions problems with compiled source files ($py.class)
    - [ GH-57 ] JavaWebStart compatibility broken
    - [ GH-35 ] Travis CI on JDKs 8, 11, 13 and add Windows to OSes
    - [ GH-50 ] (First) migration from Mercurial corrupted project history
    - [ GH-27 ] -Q new always fails
    - [ 2892 ] Migrate from hg.python.org to GitHub
    - [ GH-4 ] Swap from Mercurial to Git as our SCM tool
    - [ GH-2 ] Transfer closed-fixed issues in NEWS from frozen-mirror

  New Features

    - The jython command respects the PYTHONDONTWRITEBYTECODE environment variable (GH-128).

    - Under PR GH-101, the matching of sequence arguments to the parameters of Java methods is
      improved. A Java varargs parameter does not match a final sequence in the call
      if an array parameter could do so. (Thanks Peter Holloway.)

    - array.array itemsize of unsigned types is now the same as their signed counterparts, where 
      previously it was mostly double. Internal representations have changed. Anomalies have been
      eliminated between itemsize and the serialisation (tostring() etc.) for unsigned types,
      and in the range of values accepted in different contexts. The size of type 'u' (unicode
      character) is 4 on all platforms. Client code that was working around these anomalies may
      have to change. Overall, the experience should be closer to that with CPython.

    - We no longer aspire to compile Jython with Java 7. (We may use Java 8 features.)

    - The project has moved its home to GitHub (twice).

Jython 2.7.2
  same as 2.7.2rc1

Jython 2.7.2rc1
  Bugs fixed
    - [ 2858 ] test_ssl failure due to embedding Bouncy Castle (doc change only)