@@ -25,6 +25,7 @@ Jython 2.7.3a1
     - [ GH-98 ] CVE-2019-9740: CRLF injection by url parameter
     - [ GH-97 ] Failures in SNI support affecting pip
     - [ GH-93 ] Permissions problems with compiled source files ($py.class)
+    - [ GH-77 ] Broken AST adapter
     - [ GH-57 ] JavaWebStart compatibility broken
     - [ GH-35 ] Travis CI on JDKs 8, 11, 13 and add Windows to OSes
     - [ GH-50 ] (First) migration from Mercurial corrupted project history
